# gorqflow

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: tests.yml
gorqflow/: __init__.py
gorqflow/playtools/: __init__.py  _math.py  _playtools.py
tests/playtools/: test_math.py  test_playtools.py
