[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
sources = [
    {path = "gorqflow-obfuscated/gorqflow", include = "gorqflow"}
]

[project]
name = "gorqflow"
version = "0.3.0-dev"
dependencies = []
requires-python = ">=3.11"
authors = [
    { name = "Matej Murin", email = "matejmurin01@gmail.com" }
]
description = "Various gorq flow"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gorq", "flow", "gorqflow"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = 'https://github.com/murinmat/gorqflow'
Issues = 'https://github.com/murinmat/gorqflow/issues'

[tool.hatch.version]
path = "gorqflow/__init__.py"
